--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/Users/yabumoto/Documents/apache-tomcat-7.0.69/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="/Users/yabumoto/Documents/apache-tomcat-7.0.69/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/Users/yabumoto/Documents/apache-tomcat-7.0.69/lib/servlet-api.jar" sourcepath="/var/folders/dx/2y8vs0f54bv9pxrxzpq635280000gn/T/decompiler/source/tomcat-servlet-api-7.0.69-sources-1497937983523.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
